--- a/ext/css/material.css
+++ b/ext/css/material.css
@@ -69,6 +69,7 @@
     --text-color-light4: #888888;
     --background-color: #f8f9fa;
     --background-color-light: #ffffff;
+    --background-color-dark1: #eeeeee;
 
     --shadow-color: rgba(0, 0, 0, 0.185);
     --shadow-color-off: rgba(0, 0, 0, 0);
@@ -128,6 +129,7 @@
     --text-color-light4: #777777;
     --background-color: #1e1e1e;
     --background-color-light: #0a0a0a;
+    --background-color-dark1: #333333;
 
     --shadow-color: rgba(255, 255, 255, 0.185);
     --shadow-color-off: rgba(255, 255, 255, 0);
