--- a/ext/css/structured-content.css
+++ b/ext/css/structured-content.css
@@ -62,16 +62,24 @@
     padding: 0.25em;
 }
 .gloss-image-background {
+    --image: none;
+
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: var(--text-color);
-
-    --image: none;
-    --icon-size: contain;
-    --icon-image: var(--image);
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: center center;
+    -webkit-mask-mode: alpha;
+    -webkit-mask-size: contain;
+    -webkit-mask-image: var(--image);
+    mask-repeat: no-repeat;
+    mask-position: center center;
+    mask-mode: alpha;
+    mask-size: contain;
+    mask-image: var(--image);
 }
 .gloss-image {
     display: inline-block;
@@ -192,7 +200,6 @@
 .gloss-sc-table {
     table-layout: auto;
     border-collapse: collapse;
-    border-spacing: 0;
 }
 .gloss-sc-tbody {
     background-color: transparent;
@@ -205,7 +212,9 @@
 }
 .gloss-sc-th,
 .gloss-sc-td {
-    border: calc(1em / var(--font-size-no-units)) solid var(--text-color-light2);
+    border-width: calc(1em / var(--font-size-no-units));
+    border-style: solid;
+    border-color: var(--text-color-light2);
     padding: 0.25em;
     vertical-align: top;
 }
