Update dictionary image link color (#1778)

--- a/dev/data/structured-content-overrides.css
+++ b/dev/data/structured-content-overrides.css
@@ -21,6 +21,12 @@
 .gloss-image-link[data-background=true]>.gloss-image-container {
     /* remove-property background-color */
 }
+.gloss-image-link {
+    color: inherit;
+}
+.gloss-image-link:hover {
+    /* remove-rule */
+}
 .gloss-image-container-overlay {
     font-size: initial;
     line-height: initial;
