Simplify get media structure (#1817)
* Remove format argument of getMedia

* Implement escaping

--- a/ext/data/templates/anki-field-templates-upgrade-v13.handlebars
+++ b/ext/data/templates/anki-field-templates-upgrade-v13.handlebars
@@ -1,11 +1,11 @@
 {{#*inline "selection-text"}}
-    {{~#if (hasMedia "selectionText")}}{{#getMedia "selectionText" format="text"}}{{/getMedia}}{{/if~}}
+    {{~#if (hasMedia "selectionText")}}{{#getMedia "selectionText"}}{{/getMedia}}{{/if~}}
 {{/inline}}
 
 {{#*inline "sentence-furigana"}}
     {{~#if definition.cloze~}}
         {{~#if (hasMedia "textFurigana" definition.cloze.sentence)~}}
-            {{#getMedia "textFurigana" definition.cloze.sentence format="html"}}{{/getMedia}}
+            {{#getMedia "textFurigana" definition.cloze.sentence escape=false}}{{/getMedia}}
         {{~else~}}
             {{definition.cloze.sentence}}
         {{~/if~}}
@@ -36,7 +36,7 @@
     {{~/if~}}
 {{=======}}
     {{~#if (hasMedia "audio")~}}
-        [sound:{{#getMedia "audio" format="fileName"}}{{/getMedia}}]
+        [sound:{{#getMedia "audio"}}{{/getMedia}}]
     {{~/if~}}
 {{>>>>>>>}}
 
@@ -44,7 +44,7 @@
     <img src="{{definition.screenshotFileName}}" />
 {{=======}}
     {{~#if (hasMedia "screenshot")~}}
-        <img src="{{#getMedia "screenshot" format="fileName"}}{{/getMedia}}" />
+        <img src="{{#getMedia "screenshot"}}{{/getMedia}}" />
     {{~/if~}}
 {{>>>>>>>}}
 
@@ -54,12 +54,12 @@
     {{~/if~}}
 {{=======}}
     {{~#if (hasMedia "clipboardImage")~}}
-        <img src="{{#getMedia "clipboardImage" format="fileName"}}{{/getMedia}}" />
+        <img src="{{#getMedia "clipboardImage"}}{{/getMedia}}" />
     {{~/if~}}
 {{>>>>>>>}}
 
 {{<<<<<<<}}
 {{~#if definition.clipboardText~}}{{definition.clipboardText}}{{~/if~}}
 {{=======}}
-{{~#if (hasMedia "clipboardText")}}{{#getMedia "clipboardText" format="text"}}{{/getMedia}}{{/if~}}
+{{~#if (hasMedia "clipboardText")}}{{#getMedia "clipboardText"}}{{/getMedia}}{{/if~}}
 {{>>>>>>>}}
