--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -1478,11 +1478,11 @@ button.definition-item-expansion-button:focus:focus-visible+.definition-item-con
 .pitch-accent-tag-list:not([data-count='0']) {
     margin-right: 0.375em;
 }
-.pitch-accent-details {
-    display: inline-block;
-    height: 0;
-    padding: 0 0.25em;
-    vertical-align: middle;
+.pronunciation-downstep-notation-container {
+    margin-left: 0.25em;
+}
+.pronunciation-graph-container {
+    margin-left: 0.25em;
 }
 
 
@@ -1947,13 +1947,13 @@ button.footer-notification-close-button {
 :root[data-show-pitch-accent-downstep-notation=true] .pitch-accent-disambiguation[data-type=reading] {
     display: none;
 }
-:root[data-show-pitch-accent-downstep-notation=false] .pitch-accent-characters {
+:root[data-show-pitch-accent-downstep-notation=false] .pronunciation-text-container {
     display: none;
 }
-:root[data-show-pitch-accent-position-notation=false] .pitch-accent-position {
+:root[data-show-pitch-accent-position-notation=false] .pronunciation-downstep-notation-container {
     display: none;
 }
-:root[data-show-pitch-accent-graph=false] .pitch-accent-details {
+:root[data-show-pitch-accent-graph=false] .pronunciation-graph-container {
     display: none;
 }
 
