Anki field templates suggestions (#1940)
* Remove unused

* Bold the suggested default field value

--- a/ext/css/material.css
+++ b/ext/css/material.css
@@ -1261,6 +1261,9 @@ button.popup-menu-item {
     font-family: inherit;
     align-items: center;
 }
+button.popup-menu-item.popup-menu-item-bold {
+    font-weight: bold;
+}
 button.popup-menu-item:not([hidden]) {
     display: flex;
 }
