Frequency dictionary sort (#1938)
* Add sortDictionary/sortDictionaryOrder options

* Update options

* Add API.getTermFrequencies

* Add settings

* Implement frequency dictionary sorting

* Update test

* Update test data

* Fix handling of undefined rank-based frequencies

--- a/ext/css/settings.css
+++ b/ext/css/settings.css
@@ -2259,9 +2259,13 @@ input[type=number].dictionary-priority {
 }
 .horizontal-flex.horizontal-flex-nowrap {
     flex-wrap: nowrap;
+    margin-left: 0;
 }
 .horizontal-flex>* {
     margin-left: 0.375em;
+}
+.horizontal-flex.horizontal-flex-nowrap>*:first-child {
+    margin-left: 0;
 }
 .horizontal-flex-fill {
     flex-grow: 1;
