Search CSS updates (#1979)
* Update styles

* Limit the height of the query parser

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -568,7 +568,13 @@ button.sidebar-button.sidebar-button-highlight {
 
 
 /* Search page */
+.search-header {
+    display: flex;
+    flex-flow: column nowrap;
+    max-height: 100vh;
+}
 #query-parser-container {
+    overflow-y: auto;
     padding-left: var(--entry-horizontal-padding);
     padding-right: var(--entry-horizontal-padding);
     padding-bottom: 0.25em;
